--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 body {
   margin: 0;
   color: white;
+  min-width: 375px;
+  max-height: 590px;
 }
 
 .nav-bar {
@@ -16,10 +18,12 @@ body {
   height: 72px;
 }
 
-h2 {
+#header-name {
   margin-right: auto;
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
+  text-decoration: none;
+  color: white;
 }
 
 #btn-menu {
@@ -31,15 +35,21 @@ h1 {
   font-size: 56px;
   font-family: 'Crete Round', serif;
   color: #ff6b00;
+  font-weight: 400;
+  line-height: 64px;
+  letter-spacing: 0.37px;
 }
 
-h3 {
+.Software {
   font-size: 24px;
   font-family: 'Roboto', sans-serif;
+  line-height: 64px;
 }
 
 p {
   font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+  line-height: 24px;
 }
 
 .container {
@@ -47,26 +57,30 @@ p {
 }
 
 .hero {
+  width: auto;
   display: flex;
-  justify-content: space-around;
   flex-direction: column;
+  align-items: flex-start;
   background-color: #1c1a19;
   background-image: url("icons/images/illustration-header-mobile.png");
   background-repeat: no-repeat;
   background-position: bottom right;
   padding-left: 10%;
   height: 590px;
+  margin-top: 0;
 }
 
 .text {
+  margin-top: 0;
   max-width: fit-content;
   padding-right: 10%;
+  padding-top: 0;
 }
 
 .icons {
-  margin: 0;
   display: flex;
-  padding-right: 10%;
+  align-items: center;
+  margin: 0;
 }
 
 .icons img {
