--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ body {
   height: 72px;
 }
 
+.nav-bar ul {
+  list-style: none;
+  display: flex;
+}
+
 #header-name {
   margin-right: auto;
   font-size: 18px;
@@ -439,11 +444,18 @@ footer {
 }
 
 button:hover {
-  background-color: #8993a4;
+  background-color: #FFF5E1;
+  border: 1px solid #e05304;
+  color: #e05304;
 }
 
 button:active {
   background-color: #e05304;
+  color: white;
+}
+button:disabled {
+  background-color: #F4F1F0;
+  color: #5B5957;
 }
 
 .nav-link {
@@ -493,7 +505,7 @@ button:active {
     background-image: url("icons/images/Illustration-desktopV.png");
     background-repeat: no-repeat;
     background-position: right;
-    background-size: 360px;
+    background-size: 500px;
     padding-left: 0;
     display: flex;
     flex-direction: row-reverse;
@@ -504,7 +516,8 @@ button:active {
   }
 
   .description {
-    max-width: 768px;
+    width: auto;
+    margin-right: 50%;
   }
 
   .icons {
@@ -558,7 +571,6 @@ button:active {
 
   .art1 {
     background-image: url("icons/images/desktop/Img\ Placeholder1.png");
-    border: 1px solid #091e42;
     height: 435px;
   }
 
@@ -654,4 +666,10 @@ button:active {
   .footer-line {
     display: none;
   }
+
+  .professional-art:hover {
+    cursor: pointer;
+    border: 2px solid #172b4d;
+  }
+  
 }
