--- a/style.css
+++ b/style.css
@@ -28,78 +28,6 @@ body {
   display: flex;
 }
 
-#btn-menu:hover {
-  cursor: pointer;
-}
-
-/* mobile menu */
-
-#mobile-menu-modal {
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background: #e5e5e5;
-}
-
-.toogleModalDisplay{
-  display: none;
-}
-
-#mobile-menu {
-  background-color: #3c3a39;
-  height: 90%;
-}
-#mobile-menu ul {
-  list-style: none;
-  color: #fff5e1;
-  padding-left: 0;
-}
-
-#mobile-menu ul li a {
-  text-decoration: none;
-  font-family: "Inter", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 44px;
-  color: #fff5e1;
-}
-#mobile-menu ul li {
-  padding: 1.5rem 2rem;
-}
-
-#modal-close-icon {
-  padding: 2rem 0;
-  width: 80%;
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  margin-left: 10%;
-}
-
-#mobile-menu-bottom {
-  display: flex;
-  justify-content: center;
-  background-color: #0d151e;
-  height: 0.1rem;
-  width: 50%;
-  margin: 4rem auto;
-}
-
-.mobile-menu-separator {
-  width: 90%;
-
-  margin: 0 auto;
-  height: 0;
-  border-bottom: 1px solid;
-  background: #6f6c6b;
-}
-
-/* ^menu */
-
 #header-name {
   margin-right: auto;
   font-size: 18px;
@@ -323,6 +251,83 @@ body {
   padding-left: 5%;
   margin-top: 70px;
 }
+
+/* mobile menu */
+
+#mobile-menu-modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: #e5e5e5;
+}
+
+.toogleModalDisplay {
+  display: none;
+}
+
+#mobile-menu {
+  background-color: #3c3a39;
+  height: 90%;
+}
+
+#mobile-menu ul {
+  list-style: none;
+  color: #fff5e1;
+  padding-left: 0;
+}
+
+#mobile-menu ul li a {
+  text-decoration: none;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff5e1;
+}
+
+#mobile-menu ul li {
+  padding: 1.5rem 2rem;
+}
+
+#modal-close-icon {
+  padding: 2rem 0;
+  width: 80%;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  margin-left: 10%;
+}
+
+#mobile-menu-bottom {
+  display: flex;
+  justify-content: center;
+  background-color: #0d151e;
+  height: 0.1rem;
+  width: 50%;
+  margin: 4rem auto;
+}
+
+.mobile-menu-separator {
+  width: 90%;
+  margin: 0 auto;
+  height: 0;
+  border-bottom: 1px solid;
+  background: #6f6c6b;
+}
+
+#btn-menu:hover {
+  cursor: pointer;
+}
+
+#modal-close-icon:hover {
+  cursor: pointer;
+}
+
+/* ^menu */
 
 /* grid positioning */
 .professional-art {
