--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
   width: 100%;
 }
 
+header {
+  width: 100%;
+}
+
 .nav-bar {
   background-color: #3e3c3c;
   color: white;
@@ -37,6 +41,7 @@ body {
 }
 
 #btn-menu {
+  display: block;
   font-size: 18px;
   padding-left: 2%;
 }
@@ -65,7 +70,7 @@ body {
 }
 
 .container {
-  width: auto;
+  width: 100%;
   height: 590px;
   margin-bottom: 70px;
 }
@@ -80,6 +85,7 @@ body {
   background-repeat: no-repeat;
   background-position: bottom right;
   padding-left: 10%;
+  padding-top: 10%;
   height: 590px;
 }
 
@@ -124,6 +130,7 @@ body {
 
 .work-container {
   display: grid;
+  overflow: hidden;
   gap: 24px;
   padding: 50px 0;
 }
@@ -420,7 +427,6 @@ body {
   font-size: 72px;
   font-weight: 400;
   line-height: 88px;
-  letter-spacing: 0.3700000047683716px;
   text-align: left;
   color: #ff6b00;
 }
