--- a/style.css
+++ b/style.css
@@ -182,6 +182,13 @@ header {
   list-style: none;
 }
 
+.pop-tech-list li {
+  border: 1px solid #979493;
+  padding: 10px 12px;
+  font-family: 'Poppins', sans-serif;
+  color: #3c3a39;
+}
+
 .multi-post > div > ul > li {
   border: 1px solid #8993a4;
   padding: 10px;
@@ -561,19 +568,20 @@ button:disabled {
 .about-me img {
   display: none;
 }
+
 /* ....... POPUP....... */
 
 .pop-container-big {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
+  display: none;
+  position: fixed;
+  z-index: 1;
   top: 0;
   bottom: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: white; 
-  background-color: rgba(0,0,0,0.4); 
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: white;
+  background-color: rgba(0, 0, 0, 0.4);
   padding-left: 5%;
   padding-right: 5%;
   padding-top: 5%;
@@ -609,25 +617,18 @@ button:disabled {
 }
 
 .pop-title {
-font-family: 'Roboto';
-font-size: 32px;
-font-weight: 700;
-line-height: 44px;
-color: #172B4D;
-text-align: left;
+  font-family: 'Roboto', sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 44px;
+  color: #172b4d;
+  text-align: left;
 }
 
 .pop-tech-list {
   list-style: none;
   display: flex;
   gap: 7px;
-}
-
-.pop-tech-list li {
-  border: 1px solid #979493;
-  padding: 10px 12px;
-  font-family: 'Poppins';
-  color: #3C3A39;
 }
 
 .pop-description {
@@ -638,7 +639,7 @@ text-align: left;
 }
 
 .pop-paragraph {
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
@@ -653,13 +654,13 @@ text-align: left;
 
 .pop-button {
   padding: 12px;
-  font-family: Inter;
+  font-family: 'Inter', sans-serif;
   font-size: 17px;
   font-weight: 700;
   line-height: 24px;
   text-align: center;
   color: white;
-  background: #FF6B00;
+  background: #ff6b00;
   border: none;
 }
 
@@ -668,7 +669,7 @@ text-align: left;
   flex-direction: column;
   justify-content: space-between;
   gap: 20px;
-} 
+}
 
 .pop-image {
   width: 100%;
@@ -681,18 +682,17 @@ text-align: left;
 /* .......desktop version...... */
 
 @media (min-width: 768px) {
-
   .pop-title {
     display: none;
   }
 
   .pop-title-desk {
     display: block;
-    font-family: 'Crete Round';
+    font-family: 'Crete Round', serif;
     font-size: 32px;
     font-weight: 400;
     line-height: 44px;
-    color: #172B4D;
+    color: #172b4d;
   }
 
   .pop-description {
@@ -704,10 +704,8 @@ text-align: left;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }  
+  }
 
-  
-  
   .container {
     width: 100vw;
     height: 100vh;
